# LangChain-for-LLM-Application-Development

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
envs/: openai.env
